--- a/src/components/animations/MetaBalls.css
+++ b/src/components/animations/MetaBalls.css
@@ -2,13 +2,4 @@
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-}
-
-.metaballs-container canvas {
-  position: absolute;
-  inset: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
 }
